--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,8 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
+      // "npm --prefix \"$RESOURCE_DIR\" run lint"
+      "npm --prefix $Env:RESOURCE_DIR run lint"
     ]
   },
   "hosting": {
