--- a/firebase.json
+++ b/firebase.json
@@ -8,9 +8,9 @@
   },
   "functions": {
     "predeploy": [
-      // "npm --prefix \"$RESOURCE_DIR\" run lint"
       "npm --prefix $Env:RESOURCE_DIR run lint"
-    ]
+    ],
+    "source": "functions"
   },
   "hosting": {
     "public": "public",
